# dumbdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/dumbdb/: Cargo.toml
crates/dumbdb/src/: catalog.rs  lib.rs  main.rs  storage.rs
crates/dumbdb/src/query/: ddl.rs  error.rs  types.rs
crates/dumbdb/src/query/dml/: mod.rs
crates/repl/: Cargo.toml
crates/repl/src/: error.rs  execute.rs  main.rs  parse.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: byte_lines.rs  catalog.rs  helper.rs  lib.rs  main.rs  storage.rs  table.rs
src/query/: ddl.rs  dml.rs  mod.rs  types.rs
src/query/dml/: common.rs  filter_item.rs  get_item.rs  mod.rs  put_item.rs
