[package]
name = "dumbdb"
version = "0.1.0"
edition = "2021"
authors = ["Anon Ray <rayanon004@gmail.com>"]

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
axum-macros = "0.4.2"
