[package]
name = "dumbdb"
version = "0.1.0"
edition = "2021"
authors = ["Anon Ray <rayanon004@gmail.com>"]

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-macros = "0.4.2"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["display"] }
futures = "0.3.31"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smol_str = "0.3.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
use = "0.0.1-pre.0"

[dev-dependencies]
axum-macros = "0.4.2"
