[package]
name = "dumbdb-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
clap = { version = "4.5.19", features = ["derive", "string"] }
rustyline = "14.0.0"

dumbdb = { path = "../dumbdb" }
