[package]
name = "dumbdb-server"
version = "0.1.0"
edition = "2021"
authors = ["Anon Ray <rayanon004@gmail.com>"]

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
axum-macros = "0.4.2"
clap = { version = "4.5.19", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dumbdb = { path = "../dumbdb" }

[dev-dependencies]
axum-macros = "0.4.2"
